--- a/mybatis-boost-test/src/test/resources/application.properties
+++ b/mybatis-boost-test/src/test/resources/application.properties
@@ -5,3 +5,4 @@ mybatisboost.name-adaptor=cn.mybatisboost.core.adaptor.SnakeCaseNameAdaptor
 mybatisboost.metric.enabled=true
 mybatisboost.show-query=true
 mybatisboost.show-query-with-parameters=true
+mybatisboost.limiter.enabled=true
