--- a/mybatis-boost-spring-boot-starter/pom.xml
+++ b/mybatis-boost-spring-boot-starter/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>cn.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
-        <version>2.3.1-SNAPSHOT</version>
+        <version>2.3.1</version>
     </parent>
 
     <artifactId>mybatis-boost-spring-boot-starter</artifactId>
