--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
                 <artifactId>jackson-module-parameter-names</artifactId>
                 <version>2.9.8</version>
             </dependency>
+            <dependency>
+                <groupId>cglib</groupId>
+                <artifactId>cglib</artifactId>
+                <version>3.2.10</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
