--- a/mybatis-boost-core/pom.xml
+++ b/mybatis-boost-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>cn.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
-        <version>2.3.2</version>
+        <version>2.3.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>mybatis-boost-core</artifactId>
@@ -29,10 +29,6 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.javassist</groupId>
-            <artifactId>javassist</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
